--- a/src/userwindow.ui
+++ b/src/userwindow.ui
@@ -39,7 +39,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>4</number>
     </property>
     <widget class="QWidget" name="userselect">
      <property name="enabled">
@@ -83,7 +83,7 @@
       </property>
       <property name="font">
        <font>
-        <family>Lato Semibold</family>
+        <family>Lato</family>
         <pointsize>12</pointsize>
        </font>
       </property>
@@ -116,6 +116,11 @@
         <width>451</width>
         <height>671</height>
        </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Lato</family>
+       </font>
       </property>
      </widget>
     </widget>
@@ -323,7 +328,7 @@
          </property>
          <property name="font">
           <font>
-           <family>Arial</family>
+           <family>Lato</family>
            <pointsize>36</pointsize>
           </font>
          </property>
@@ -504,6 +509,9 @@
         <height>26</height>
        </rect>
       </property>
+      <property name="alignment">
+       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+      </property>
       <property name="clearButtonEnabled">
        <bool>false</bool>
       </property>
@@ -533,7 +541,7 @@
        <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Lato Medium'; font-size:11pt; font-weight:400; font-style:normal;&quot; bgcolor=&quot;#000000&quot;&gt;
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Lato Medium'; font-size:11pt; font-weight:400; font-style:normal;&quot;&gt;
 &lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
       <property name="textInteractionFlags">
